--- a/src/styles/components/link.css
+++ b/src/styles/components/link.css
@@ -7,14 +7,14 @@
 }
 
 .link--outline {
-  @apply rounded border border-grey-200 px-4 py-3 transition-colors duration-150 hover:border-grey-400 hover:bg-grey-100;
+  @apply rounded border border-grey-200 px-4 py-3 transition-colors duration-150 hover:border-grey-400 hover:bg-white;
 
   &.active {
     @apply border-green-500 bg-white;
   }
 
   &.disabled {
-    @apply cursor-not-allowed bg-grey-200 opacity-60 hover:border-grey-200;
+    @apply cursor-not-allowed bg-grey-200 opacity-60 hover:border-grey-200 hover:bg-grey-200;
   }
 
   &.loading {
